--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             --dark-text-dim: #7d8590;
             --dark-border: #30363d;
             --dark-accent: #2f81f7;
-            
+        
             /* GitHub Light Theme */
             --light-bg: #ffffff;
             --light-card: #f6f8fa;
@@ -793,7 +793,7 @@
                         <a href="#contact" class="btn btn-primary">
                             <i class="fas fa-paper-plane"></i> Contact Me
                         </a>
-                        <a href="resume.pdf" download class="btn btn-outline">
+                        <a href="Resume.pdf" download class="btn btn-outline">
                             <i class="fas fa-download"></i> Download Resume
                         </a>
                     </div>
@@ -1327,7 +1327,7 @@ Developed a 2D paddle game in Godot with responsive controls, ball physics, and 
                     <h2 class="section-title">Resume</h2>
                 </div>
                 <p>Download my complete resume for more details about my experience and education.</p>
-                <a href="resume.pdf" download class="resume-download">
+                <a href="Resume.pdf" download class="resume-download">
                     <i class="fas fa-download"></i> Download Resume
                 </a>
             </section>
