--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                         <a href="#contact" class="btn btn-primary">
                             <i class="fas fa-paper-plane"></i> Contact Me
                         </a>
-                        <a href="Resume.pdf" download class="btn btn-outline">
+                        <a href="Resume.pdf?v=2" download class="resume-download">
                             <i class="fas fa-download"></i> Download Resume
                         </a>
                     </div>
@@ -1327,9 +1327,10 @@ Developed a 2D paddle game in Godot with responsive controls, ball physics, and 
                     <h2 class="section-title">Resume</h2>
                 </div>
                 <p>Download my complete resume for more details about my experience and education.</p>
-                <a href="Resume.pdf" download class="resume-download">
+                <a href="Resume.pdf?v=2" download class="resume-download">
                     <i class="fas fa-download"></i> Download Resume
                 </a>
+
             </section>
         </div>
     </main>
